# friday.io

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  friday.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: PLAN.md
friday/: __init__.py  cli.py  config.py
friday/agent/: core.py
friday/autonomy/: __init__.py  loop.py  notify.py  runner.py  schedule.py  tools.py  watcher.py
friday/fs/: audit.py  permissions.py  undo.py
friday/memory/: history.py  index.py  store.py  tools.py
friday/server/: __init__.py  app.py  client.py  hub.py  voice_bridge.py
friday/server/static/: index.html
friday/voice/: __init__.py  audio.py  chunker.py  doctor.py  handsfree.py  session.py  stt.py  tts.py  vad.py  verify.py  wakeword.py
tests/: test_audit.py  test_autonomy.py  test_chunker.py  test_config.py  test_document_index.py  test_handsfree.py  test_history.py  test_memory.py  test_panel_e2e.py  test_permissions.py  test_server.py  test_skills.py  test_tts_download.py  test_undo.py  test_voice_session.py  test_wake_stt.py
