[project]
name = "friday"
version = "0.1.0"
description = "FRIDAY — a local-first personal AI assistant with voice and text, safe filesystem powers, and an agentic Claude core"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "pypdf>=5.0",  # PDF text extraction for the file index
    "python-docx>=1.1",  # DOCX text extraction for the file index
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "websockets>=13",
]
voice = [
    "faster-whisper>=1.0",
    "piper-tts>=1.2",
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "certifi>=2024.0",  # CA bundle for model downloads (see tts.download_env)
]
# Hands-free extras that resolve on modern Python. openwakeword (wake word)
# still pins tflite-runtime with no 3.13+ wheels, so install it manually:
#   uv pip install --no-deps openwakeword && uv pip install onnxruntime tqdm scipy scikit-learn requests
handsfree = [
    "friday[voice]",
    "speechbrain>=1.0",  # ECAPA speaker verification (pulls torch — heavy)
]

[project.scripts]
friday = "friday.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "httpx>=0.27",  # starlette TestClient
    "playwright>=1.4",  # browser E2E for the chat panel (tests/test_panel_e2e.py)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["friday"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
